// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CanvasNodeDefault > configurable > should render configurable node correctly 1`] = `
<div
  class="node configurable"
  data-test-id="canvas-configurable-node"
  style="--configurable-node--input-count: 0; --canvas-node--main-input-count: 0; --canvas-node--main-output-count: 0;"
>
  <!--v-if-->
  
  
  <!--v-if-->
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
</div>
`;

exports[`CanvasNodeDefault > configuration > should render configurable configuration node correctly 1`] = `
<div
  class="node configurable configuration"
  data-test-id="canvas-configurable-node"
  style="--configurable-node--input-count: 0; --canvas-node--main-input-count: 0; --canvas-node--main-output-count: 0;"
>
  <!--v-if-->
  
  
  <!--v-if-->
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
</div>
`;

exports[`CanvasNodeDefault > configuration > should render configuration node correctly 1`] = `
<div
  class="node configuration"
  data-test-id="canvas-configuration-node"
  style="--canvas-node--main-input-count: 0; --canvas-node--main-output-count: 0;"
>
  <!--v-if-->
  
  
  <!--v-if-->
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
</div>
`;

exports[`CanvasNodeDefault > should render node correctly 1`] = `
<div
  class="node"
  data-test-id="canvas-default-node"
  style="--canvas-node--main-input-count: 0; --canvas-node--main-output-count: 0;"
>
  <!--v-if-->
  
  
  <!--v-if-->
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
</div>
`;

exports[`CanvasNodeDefault > trigger > should render trigger node correctly 1`] = `
<div
  class="node trigger"
  data-test-id="canvas-trigger-node"
  style="--canvas-node--main-input-count: 0; --canvas-node--main-output-count: 0;"
>
  <!--v-if-->
  
  
  <!--v-if-->
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
</div>
`;
